# ChangeLog for dev-java/appframework
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  appframework-1.03.ebuild:
  Fixed installation of the jar

  16 Jun 2008; Serkan Kaba <serkan@gentoo.org> appframework-1.03.ebuild:
  Fix tests and javadoc. Add src_test()

  08 Jan 2008; <alistair@gentoo.org> +metadata.xml,
  +appframework-1.03.ebuild:
  Adding appframework
