@@ -1,4 +1,4 @@
 DIST AppFramework-1.03-src.zip 413438 RMD160 860b7c76b1b2e25a55e65d2e66d10dab80df15cc SHA1 9ce96108b657a091da54a5a566d85e5cfdfff56e SHA256 9fad98a0b70e6c67cc38dfe9d01b00fe7b7fedf51fa50ac68e7a86d7d1c38fcd
-EBUILD appframework-1.03.ebuild 1537 RMD160 7417372a409c818d89cdd785e2d67e5bd2c7a37e SHA1 c99e0307d2249b0cc65ef984449165e84da5fcad SHA256 633adaaeaf93b0a3bd1293ca450bac30de1aea357b0e5cb23ddf6a858f2815a4
-MISC ChangeLog 453 RMD160 720dc8c5ef1f26d94d22092a2d69286565bef81d SHA1 a8fa538563f498c7070aab942ca13f035f6ada5d SHA256 e08ad0b22cde36e3aaf60493bead11daa2f12e0efc1b4e1db45c3b01cf6b6e90
+EBUILD appframework-1.03.ebuild 1482 RMD160 be14e5b43732be8f755bd29ee2657d99bbc60d4f SHA1 44bb9e45efbaa85b90ef8741c8d32a81d297fe4e SHA256 92ed0d2fd82bf29d44674165868dc8579875ccec929beb55fd676ab7b56f7186
+MISC ChangeLog 553 RMD160 75b638f1be3d9b41a6a07c8bf63930c1f0535fda SHA1 729fb9cda95deb1a57e6d216b8ba519776206bf8 SHA256 4ec4bac508d4f53f99113b7417e82c6b1f43b21aab6cf20922f6e59cdbe88b18
 MISC metadata.xml 912 RMD160 f4e8ee775fe7d04ad24d6c936849aee21bad3b0d SHA1 83acee40d2aa86b7bc5a46599f069ddbb115fd1d SHA256 eb3a923ee0473f7dd1cc727aa7c44d1a49755de1a10a4c93e22b22c49ee4db57
