@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/appframework
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 May 2009; Alistair Bush <ali_bush@gentoo.org> appframework-1.03.ebuild:
+  Fix javadoc install
 
   03 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
   appframework-1.03.ebuild:
